...
                            <constraint firstItem="Wcp-Dk-sU9" firstAttribute="top" secondItem="Uho-iS-mYf" secondAttribute="top" id="7mu-Y0-ekL"/>
                            <constraint firstItem="pnX-hO-fKX" firstAttribute="trailing" secondItem="Wcp-Dk-sU9" secondAttribute="trailing" id="VAJ-Ec-ZYS"/>
                            <constraint firstItem="pnX-hO-fKX" firstAttribute="bottom" secondItem="Wcp-Dk-sU9" secondAttribute="bottom" id="gAH-Tg-BKv"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="pnX-hO-fKX"/>
                    </view>
                    <navigationItem key="navigationItem" title="Managers" id="nOy-Vs-8IG"/>
                    <connections>
                        <outlet property="managerTableView" destination="Wcp-Dk-sU9" id="d9e-eV-sDH"/>
                        <segue destination="1GS-sz-c46" kind="show" identifier="showEmployeeViewController" id="9J8-RD-yAm"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="gbp-Df-a8d" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <connections>
                            <outlet property="dataSource" destination="1GS-sz-c46" id="5Wx-ZC-BEn"/>
                            <outlet property="delegate" destination="1GS-sz-c46" id="9Ek-yf-DvU"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Employees" id="kTA-Xe-MdQ"/>
                    <connections>
                        <outlet property="employeeTableView" destination="ibk-8L-2Zb" id="NPt-gV-L7Q"/>
                        <segue destination="3Ck-Jz-Jpo" kind="show" identifier="showTrainingViewController" id="1PY-0y-6zC"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="0CA-b8-Bjy" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
