...
  }
  
  var description: String {
    return """
    EmployeeId: \(employeeId)
    State: \(state)
    Trainings: \(String(describing: trainings ?? nil))
"""
  }
}

extension Array where Element == TrainingDownload {
  func sum() -> Int {
...
